python/rregadmin/util/path_wrapper.py


# ../../../rregadmin/util/path.h 36
class rra_path_(Structure):
    pass
rra_path = rra_path_
rra_path_._fields_ = [
    # ../../../rregadmin/util/path.h 36
]
# ../../../rregadmin/util/path.h 45
rra_path_new_full = _libraries['librregadmin.so.1'].rra_path_new_full
rra_path_new_full.restype = POINTER(rra_path)
# rra_path_new_full(in_str, mode)
rra_path_new_full.argtypes = [STRING, rra_path_mode]
rra_path_new_full.__doc__ = \
"""rra_path * rra_path_new_full(unknown * in_str, rra_path_mode mode)
../../../rregadmin/util/path.h:45"""
# ../../../rregadmin/util/path.h 51
rra_path_new_win = _libraries['librregadmin.so.1'].rra_path_new_win
rra_path_new_win.restype = POINTER(rra_path)
# rra_path_new_win(in_str)
rra_path_new_win.argtypes = [STRING]
rra_path_new_win.__doc__ = \
"""rra_path * rra_path_new_win(unknown * in_str)
../../../rregadmin/util/path.h:51"""
# ../../../rregadmin/util/path.h 57
rra_path_new_unix = _libraries['librregadmin.so.1'].rra_path_new_unix
rra_path_new_unix.restype = POINTER(rra_path)
# rra_path_new_unix(in_str)
rra_path_new_unix.argtypes = [STRING]
rra_path_new_unix.__doc__ = \
"""rra_path * rra_path_new_unix(unknown * in_str)
../../../rregadmin/util/path.h:57"""
# ../../../rregadmin/util/path.h 63
rra_path_copy = _libraries['librregadmin.so.1'].rra_path_copy
rra_path_copy.restype = POINTER(rra_path)
# rra_path_copy(in_path)
rra_path_copy.argtypes = [POINTER(rra_path)]
rra_path_copy.__doc__ = \
"""rra_path * rra_path_copy(unknown * in_path)
../../../rregadmin/util/path.h:63"""
# ../../../rregadmin/util/path.h 69
rra_path_copy_full = _libraries['librregadmin.so.1'].rra_path_copy_full
rra_path_copy_full.restype = POINTER(rra_path)
# rra_path_copy_full(in_path, mode)
rra_path_copy_full.argtypes = [POINTER(rra_path), rra_path_mode]
rra_path_copy_full.__doc__ = \
"""rra_path * rra_path_copy_full(unknown * in_path, rra_path_mode mode)
../../../rregadmin/util/path.h:69"""
# ../../../rregadmin/util/path.h 75
rra_path_set = _libraries['librregadmin.so.1'].rra_path_set
rra_path_set.restype = gboolean
# rra_path_set(in_dest, in_src)
rra_path_set.argtypes = [POINTER(rra_path), POINTER(rra_path)]
rra_path_set.__doc__ = \
"""gboolean rra_path_set(rra_path * in_dest, unknown * in_src)
../../../rregadmin/util/path.h:75"""
# ../../../rregadmin/util/path.h 81
rra_path_clear = _libraries['librregadmin.so.1'].rra_path_clear
rra_path_clear.restype = gboolean
# rra_path_clear(in_path)
rra_path_clear.argtypes = [POINTER(rra_path)]
rra_path_clear.__doc__ = \
"""gboolean rra_path_clear(rra_path * in_path)
../../../rregadmin/util/path.h:81"""
# ../../../rregadmin/util/path.h 87
rra_path_free = _libraries['librregadmin.so.1'].rra_path_free
rra_path_free.restype = gboolean
# rra_path_free(in_path)
rra_path_free.argtypes = [POINTER(rra_path)]
rra_path_free.__doc__ = \
"""gboolean rra_path_free(rra_path * in_path)
../../../rregadmin/util/path.h:87"""
# ../../../rregadmin/util/path.h 93
rra_path_is_valid = _libraries['librregadmin.so.1'].rra_path_is_valid
rra_path_is_valid.restype = gboolean
# rra_path_is_valid(in_path)
rra_path_is_valid.argtypes = [POINTER(rra_path)]
rra_path_is_valid.__doc__ = \
"""gboolean rra_path_is_valid(unknown * in_path)
../../../rregadmin/util/path.h:93"""
# ../../../rregadmin/util/path.h 101
rra_path_parse = _libraries['librregadmin.so.1'].rra_path_parse
rra_path_parse.restype = gboolean
# rra_path_parse(in_path, in_str)
rra_path_parse.argtypes = [POINTER(rra_path), STRING]
rra_path_parse.__doc__ = \
"""gboolean rra_path_parse(rra_path * in_path, unknown * in_str)
../../../rregadmin/util/path.h:101"""
# ../../../rregadmin/util/path.h 109
rra_path_add = _libraries['librregadmin.so.1'].rra_path_add
rra_path_add.restype = gboolean
# rra_path_add(in_dest, in_add)
rra_path_add.argtypes = [POINTER(rra_path), POINTER(rra_path)]
rra_path_add.__doc__ = \
"""gboolean rra_path_add(rra_path * in_dest, unknown * in_add)
../../../rregadmin/util/path.h:109"""
# ../../../rregadmin/util/path.h 119
rra_path_append_part = _libraries['librregadmin.so.1'].rra_path_append_part
rra_path_append_part.restype = gboolean
# rra_path_append_part(in_dest, in_part)
rra_path_append_part.argtypes = [POINTER(rra_path), STRING]
rra_path_append_part.__doc__ = \
"""gboolean rra_path_append_part(rra_path * in_dest, unknown * in_part)
../../../rregadmin/util/path.h:119"""
# ../../../rregadmin/util/path.h 133
rra_path_prepend_part = _libraries['librregadmin.so.1'].rra_path_prepend_part
rra_path_prepend_part.restype = gboolean
# rra_path_prepend_part(in_dest, in_part)
rra_path_prepend_part.argtypes = [POINTER(rra_path), STRING]
rra_path_prepend_part.__doc__ = \
"""gboolean rra_path_prepend_part(rra_path * in_dest, unknown * in_part)
../../../rregadmin/util/path.h:133"""
# ../../../rregadmin/util/path.h 146
rra_path_normalize = _libraries['librregadmin.so.1'].rra_path_normalize
rra_path_normalize.restype = gboolean
# rra_path_normalize(in_path)
rra_path_normalize.argtypes = [POINTER(rra_path)]
rra_path_normalize.__doc__ = \
"""gboolean rra_path_normalize(rra_path * in_path)
../../../rregadmin/util/path.h:146"""
# ../../../rregadmin/util/path.h 152
rra_path_number_of_parts = _libraries['librregadmin.so.1'].rra_path_number_of_parts
rra_path_number_of_parts.restype = c_int
# rra_path_number_of_parts(in_path)
rra_path_number_of_parts.argtypes = [POINTER(rra_path)]
rra_path_number_of_parts.__doc__ = \
"""int rra_path_number_of_parts(unknown * in_path)
../../../rregadmin/util/path.h:152"""
# ../../../rregadmin/util/path.h 158
rra_path_get_part = _libraries['librregadmin.so.1'].rra_path_get_part
rra_path_get_part.restype = POINTER(ustring)
# rra_path_get_part(in_path, in_index)
rra_path_get_part.argtypes = [POINTER(rra_path), guint]
rra_path_get_part.__doc__ = \
"""unknown * rra_path_get_part(unknown * in_path, guint in_index)
../../../rregadmin/util/path.h:158"""
# ../../../rregadmin/util/path.h 164
rra_path_has_mode = _libraries['librregadmin.so.1'].rra_path_has_mode
rra_path_has_mode.restype = gboolean
# rra_path_has_mode(in_path, in_mode)
rra_path_has_mode.argtypes = [POINTER(rra_path), rra_path_mode]
rra_path_has_mode.__doc__ = \
"""gboolean rra_path_has_mode(unknown * in_path, rra_path_mode in_mode)
../../../rregadmin/util/path.h:164"""
# ../../../rregadmin/util/path.h 170
rra_path_get_mode = _libraries['librregadmin.so.1'].rra_path_get_mode
rra_path_get_mode.restype = rra_path_mode
# rra_path_get_mode(in_path)
rra_path_get_mode.argtypes = [POINTER(rra_path)]
rra_path_get_mode.__doc__ = \
"""rra_path_mode rra_path_get_mode(unknown * in_path)
../../../rregadmin/util/path.h:170"""
# ../../../rregadmin/util/path.h 176
rra_path_is_absolute = _libraries['librregadmin.so.1'].rra_path_is_absolute
rra_path_is_absolute.restype = gboolean
# rra_path_is_absolute(in_path)
rra_path_is_absolute.argtypes = [POINTER(rra_path)]
rra_path_is_absolute.__doc__ = \
"""gboolean rra_path_is_absolute(unknown * in_path)
../../../rregadmin/util/path.h:176"""
# ../../../rregadmin/util/path.h 182
rra_path_is_relative = _libraries['librregadmin.so.1'].rra_path_is_relative
rra_path_is_relative.restype = gboolean
# rra_path_is_relative(in_path)
rra_path_is_relative.argtypes = [POINTER(rra_path)]
rra_path_is_relative.__doc__ = \
"""gboolean rra_path_is_relative(unknown * in_path)
../../../rregadmin/util/path.h:182"""
# ../../../rregadmin/util/path.h 190
rra_path_dirname = _libraries['librregadmin.so.1'].rra_path_dirname
rra_path_dirname.restype = STRING
# rra_path_dirname(in_path)
rra_path_dirname.argtypes = [POINTER(rra_path)]
rra_path_dirname.__doc__ = \
"""unknown * rra_path_dirname(unknown * in_path)
../../../rregadmin/util/path.h:190"""
# ../../../rregadmin/util/path.h 198
rra_path_basename = _libraries['librregadmin.so.1'].rra_path_basename
rra_path_basename.restype = STRING
# rra_path_basename(in_path)
rra_path_basename.argtypes = [POINTER(rra_path)]
rra_path_basename.__doc__ = \
"""unknown * rra_path_basename(unknown * in_path)
../../../rregadmin/util/path.h:198"""
# ../../../rregadmin/util/path.h 207
rra_path_as_str = _libraries['librregadmin.so.1'].rra_path_as_str
rra_path_as_str.restype = STRING
# rra_path_as_str(in_path)
rra_path_as_str.argtypes = [POINTER(rra_path)]
rra_path_as_str.__doc__ = \
"""unknown * rra_path_as_str(unknown * in_path)
../../../rregadmin/util/path.h:207"""
# ../../../rregadmin/util/path.h 216
rra_path_as_ustr = _libraries['librregadmin.so.1'].rra_path_as_ustr
rra_path_as_ustr.restype = POINTER(ustring)
# rra_path_as_ustr(in_path)
rra_path_as_ustr.argtypes = [POINTER(rra_path)]
rra_path_as_ustr.__doc__ = \
"""unknown * rra_path_as_ustr(unknown * in_path)
../../../rregadmin/util/path.h:216"""
# ../../../rregadmin/util/path.h 222
rra_path_get_delimiter = _libraries['librregadmin.so.1'].rra_path_get_delimiter
rra_path_get_delimiter.restype = STRING
# rra_path_get_delimiter(in_path)
rra_path_get_delimiter.argtypes = [POINTER(rra_path)]
rra_path_get_delimiter.__doc__ = \
"""unknown * rra_path_get_delimiter(unknown * in_path)
../../../rregadmin/util/path.h:222"""
# ../../../rregadmin/util/path.h 231
rra_path_compare = _libraries['librregadmin.so.1'].rra_path_compare
rra_path_compare.restype = gint
# rra_path_compare(in_path1, in_path2)
rra_path_compare.argtypes = [POINTER(rra_path), POINTER(rra_path)]
rra_path_compare.__doc__ = \
"""gint rra_path_compare(unknown * in_path1, unknown * in_path2)
../../../rregadmin/util/path.h:231"""
# ../../../rregadmin/util/path.h 239
rra_path_equal = _libraries['librregadmin.so.1'].rra_path_equal
rra_path_equal.restype = gboolean
# rra_path_equal(in_path1, in_path2)
rra_path_equal.argtypes = [POINTER(rra_path), POINTER(rra_path)]
rra_path_equal.__doc__ = \
"""gboolean rra_path_equal(unknown * in_path1, unknown * in_path2)
../../../rregadmin/util/path.h:239"""
# ../../../rregadmin/util/path.h 247
rra_path_less = _libraries['librregadmin.so.1'].rra_path_less
rra_path_less.restype = gboolean
# rra_path_less(in_path1, in_path2)
rra_path_less.argtypes = [POINTER(rra_path), POINTER(rra_path)]
rra_path_less.__doc__ = \
"""gboolean rra_path_less(unknown * in_path1, unknown * in_path2)
../../../rregadmin/util/path.h:247"""
# ../../../rregadmin/util/path.h 263
rra_path_is_subpath = _libraries['librregadmin.so.1'].rra_path_is_subpath
rra_path_is_subpath.restype = gboolean
# rra_path_is_subpath(in_path1, in_path2)
rra_path_is_subpath.argtypes = [POINTER(rra_path), POINTER(rra_path)]
rra_path_is_subpath.__doc__ = \
"""gboolean rra_path_is_subpath(unknown * in_path1, unknown * in_path2)
../../../rregadmin/util/path.h:263"""
# ../../../rregadmin/util/path.h 272
rra_path_make_subpath = _libraries['librregadmin.so.1'].rra_path_make_subpath
rra_path_make_subpath.restype = POINTER(rra_path)
# rra_path_make_subpath(in_path1, in_path2)
rra_path_make_subpath.argtypes = [POINTER(rra_path), POINTER(rra_path)]
rra_path_make_subpath.__doc__ = \
"""rra_path * rra_path_make_subpath(unknown * in_path1, unknown * in_path2)
../../../rregadmin/util/path.h:272"""
# ../../../rregadmin/util/path.h 288
rra_path_trim_front = _libraries['librregadmin.so.1'].rra_path_trim_front
rra_path_trim_front.restype = gboolean
# rra_path_trim_front(in_path, in_parts)
rra_path_trim_front.argtypes = [POINTER(rra_path), guint]
rra_path_trim_front.__doc__ = \
"""gboolean rra_path_trim_front(rra_path * in_path, guint in_parts)
../../../rregadmin/util/path.h:288"""
# ../../../rregadmin/util/path.h 306
rra_path_trim_back = _libraries['librregadmin.so.1'].rra_path_trim_back
rra_path_trim_back.restype = gboolean
# rra_path_trim_back(in_path, in_parts)
rra_path_trim_back.argtypes = [POINTER(rra_path), guint]
rra_path_trim_back.__doc__ = \
"""gboolean rra_path_trim_back(rra_path * in_path, guint in_parts)
../../../rregadmin/util/path.h:306"""
# ../../../rregadmin/util/path.h 314
rra_path_allocated_count = _libraries['librregadmin.so.1'].rra_path_allocated_count
rra_path_allocated_count.restype = c_int
# rra_path_allocated_count()
rra_path_allocated_count.argtypes = []
rra_path_allocated_count.__doc__ = \
